--- a/src/site.ejs
+++ b/src/site.ejs
@@ -330,6 +330,20 @@
 
 </section>
 
+<section class="max-w-screen-xl mx-auto px-6">
+	<h1 class="text-3xl font-bold mb-4">Instagram Photos</h1>
+    <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mx-auto">
+        <% imageData.slice(0, 5).forEach(image => { %>
+            <li>
+                <a href="<%= image.permalink %>" target="_blank">
+                    <img src="<%= image.media_url %>" alt="<%= image.caption %>" class="w-full h-auto rounded-lg transition duration-300 transform hover:scale-105">
+                </a>
+            </li>
+        <% }); %>
+    </ul>
+
+</section>
+
 <footer class="bg-purple-200 mt-10 md:mt-14 lg:mt-20">
 	<div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
 		<div class="grid gap-10 row-gap-6 mb-8 sm:grid-cols-3 lg:grid-cols-3">
