--- a/src/site.ejs
+++ b/src/site.ejs
@@ -177,15 +177,18 @@
 				<div class="px-6 py-4">
 					<ul>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Espresso</span>
+							<span class="">Espresso</span>
+							<span class="flex-grow border-b-2 border-dotted border-gray-400"></span>
 							<span>87 Kč</span>
 						</li>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Cappuccino</span>
+							<span class="flex">Cappuccino</span>
+							<span class="flex-grow border-b-2 border-dotted border-gray-400"></span>
 							<span>87 Kč</span>
 						</li>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Latte</span>
+							<span class="flex">Latte</span>
+							<span class="flex-grow border-b-2 border-dotted border-gray-400"></span>
 							<span>87 Kč</span>
 						</li>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
@@ -331,18 +334,27 @@
 </section>
 
 <section class="max-w-screen-xl mx-auto px-6">
-	<h1 class="text-3xl font-bold mb-4">Instagram Photos</h1>
+    <h1 class="text-3xl font-bold mb-4">Instagram Photos</h1>
+	
     <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mx-auto">
-        <% imageData.slice(0, 5).forEach(image => { %>
-            <li>
-                <a href="<%= image.permalink %>" target="_blank">
-                    <img src="<%= image.media_url %>" alt="<%= image.caption %>" class="w-full h-auto rounded-lg transition duration-300 transform hover:scale-105">
-                </a>
-            </li>
-        <% }); %>
-    </ul>
-
+		<% imageData.slice(0, 8).forEach(image => { %>
+			<li class="relative">
+				<div class="overflow-hidden rounded-lg shadow-lg">
+					<a href="<%= image.permalink %>" target="_blank" class="block">
+						<img src="<%= image.media_url %>" alt="<%= image.caption %>" class="w-full h-full transition duration-300 transform hover:scale-105">
+						<div class="absolute top-0 left-0 w-full h-full bg-white opacity-0 hover:opacity-75 flex items-center justify-center text-black text-opacity-100 hover:text-opacity-100 transition duration-300">
+							<p class="text-center p-4"><%= image.caption %></p>
+						</div>
+					</a>
+				</div>
+			</li>
+		<% }); %>
+	</ul>
+	<button class="group group-hover:before:duration-500 group-hover:after:duration-1000 after:duration-500 hover:border-sky-300  duration-500 before:duration-500 hover:duration-500 underline underline-offset-2    hover:after:-right-2 hover:before:top-8 hover:before:right-16 hover:after:scale-150 hover:after:blur-none hover:before:-bottom-8 hover:before:blur-none hover:bg-sky-300 hover:underline hover:underline-offset-4  origin-left hover:decoration-2 hover:text-sky-900 relative bg-sky-800 h-16 w-64 border text-left p-3 text-gray-50 text-base font-bold rounded-lg  overflow-hidden  before:absolute before:w-12 before:h-12 before:content[''] before:right-1 before:top-1 before:z-10 before:bg-sky-400 before:rounded-full before:blur-lg  after:absolute after:z-10 after:w-20 after:h-20 after:content['']  after:bg-cyan-600 after:right-8 after:top-3 after:rounded-full after:blur">
+		Sledujte nás
+	  </button>
 </section>
+
 
 <footer class="bg-purple-200 mt-10 md:mt-14 lg:mt-20">
 	<div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
