--- a/src/site.ejs
+++ b/src/site.ejs
@@ -39,30 +39,21 @@
 			</button>
 		</div>
 		<div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-			<ul id="list-items-burger"
-				class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+			<ul id="list-items-burger" class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
 				<li>
-					<a href="#"
-					   class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
-					   aria-current="page"
-					   id="domu-button">Domů</a>
+					<a href="#navb" class="block py-2 px-3 text-black bg-blue-700 rounded md:bg-transparent hover:text-blue-700 md:p-0 menu-button" aria-current="page" id="domu-button">Domů</a>
 				</li>
 				<li>
-					<a href=""
-					   class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-					   id="oNas">O nás</a>
+					<a href="#about-us" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700 menu-button" id="oNas">O nás</a>
 				</li>
 				<li>
-					<a href=""
-					   class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-					   id="nabidka">Nabídka</a>
+					<a href="#nabidka-menu" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700 menu-button" id="nabidka">Nabídka</a>
 				</li>
 				<li>
-					<a href="#"
-					   class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-					   id="kde-najit">Kde nás najdete?</a>
+					<a href="#location" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700 menu-button" id="kde-najit">Kde nás najdete?</a>
 				</li>
 			</ul>
+			
 
 
 		</div>
@@ -72,8 +63,8 @@
 </nav>
 
 
-<section class="bg-custom-purple bg-custom-gradient flex flex-col justify-center pt-9 min-h-screen md:w-full">
-	<header class="container relative items-center flex flex-col justify-center items-center py-12 sm:pt-20">
+<section class="bg-custom-purple bg-custom-gradient flex flex-col justify-center pt-9 min-h-screen md:w-full"  id="navb">
+	<header class="container relative items-center flex flex-col justify-center py-12 sm:pt-20">
 		<h1 class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold text-center">Welcome to Rest Caaafé</h1>
 		<p class="text-lg md:text-xl lg:text-2xl xl:text-3xl text-center mt-4 px-4 md:px-0 lg:w-1/2 xl:w-2/5">Lorem
 			ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Sed euismod, nunc eget aliquet lacinia,
@@ -172,39 +163,47 @@
 				Zákusky
 			</button>
 		</div>
+		<!-- hot -->
 		<div class="content w-full" id="hot">
-			<div class="bg-white rounded-lg overflow-hidden w-full">
+			<div class="bg-white overflow-hidden w-full">
 				<div class="px-6 py-4">
 					<ul>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
 							<span class="">Espresso</span>
-							<span class="flex-grow border-b-2 border-dotted border-gray-400"></span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
 							<span>87 Kč</span>
 						</li>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
 							<span class="flex">Cappuccino</span>
-							<span class="flex-grow border-b-2 border-dotted border-gray-400"></span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
 							<span>87 Kč</span>
 						</li>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
 							<span class="flex">Latte</span>
-							<span class="flex-grow border-b-2 border-dotted border-gray-400"></span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
 							<span>87 Kč</span>
 						</li>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Latte</span>
+							<span class="flex">Latte</span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
+
 							<span>87 Kč</span>
 						</li>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Latte</span>
+							<span class="flex">Latte</span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
 							<span>87 Kč</span>
 						</li>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Latte</span>
+							<span class="flex">Latte</span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
+
 							<span>87 Kč</span>
 						</li>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Latte</span>
+							<span class="flex">Latte</span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
+
 							<span>87 Kč</span>
 						</li>
 					</ul>
@@ -212,36 +211,51 @@
 			</div>
 
 		</div>
+		<!-- cold -->
 		<div class="content w-full" id="cold">
 			<div class="bg-white rounded-lg overflow-hidden w-full">
 				<div class="px-6 py-4">
 					<ul>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Matcha</span>
+							<span class="flex">Matcha</span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
+
 							<span>87 Kč</span>
 						</li>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">cold brew</span>
+							<span class="flex">cold brew</span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
+
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex">Latte</span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
+
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex">Latte</span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
+
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex">Latte</span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
+
+							<span>87 Kč</span>
+						</li>
+						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
+							<span class="flex">Latte</span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
+
 							<span>87 Kč</span>
 						</li>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
 							<span class="flex-grow">Latte</span>
-							<span>87 Kč</span>
-						</li>
-						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Latte</span>
-							<span>87 Kč</span>
-						</li>
-						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Latte</span>
-							<span>87 Kč</span>
-						</li>
-						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Latte</span>
-							<span>87 Kč</span>
-						</li>
-						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Latte</span>
+														<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
+
 							<span>87 Kč</span>
 						</li>
 					</ul>
@@ -249,36 +263,51 @@
 			</div>
 
 		</div>
+		<!-- desserts -->
 		<div class="content w-full" id="dessert">
 			<div class="bg-white rounded-lg overflow-hidden w-full">
 				<div class="px-6 py-4">
 					<ul>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Dortík</span>
+							<span class="flex">Dortík</span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
+
 							<span>87 Kč</span>
 						</li>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Quiche</span>
+							<span class="flex">Quiche</span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
+
 							<span>87 Kč</span>
 						</li>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Latte</span>
+							<span class="flex">Latte</span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
+
 							<span>87 Kč</span>
 						</li>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Latte</span>
+							<span class="flex">Latte</span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
+
 							<span>87 Kč</span>
 						</li>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Latte</span>
+							<span class="flex">Latte</span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
+
 							<span>87 Kč</span>
 						</li>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Latte</span>
+							<span class="flex">Latte</span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
+
 							<span>87 Kč</span>
 						</li>
 						<li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-							<span class="flex-grow">Latte</span>
+							<span class="flex">Latte</span>
+							<span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
+
 							<span>87 Kč</span>
 						</li>
 					</ul>
