hero pic - mf na mobile zobrazení jde scrollovat DOPRAVA DUNNO WHY

--- a/src/site.ejs
+++ b/src/site.ejs
@@ -63,15 +63,14 @@
 </nav>
 
 
-<section class="bg-custom-purple bg-custom-gradient flex flex-col justify-center pt-9 min-h-screen md:w-full"  id="navb">
-	<header class="container relative items-center flex flex-col justify-center py-12 sm:pt-20">
-		<h1 class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold text-center">Welcome to Rest Caaafé</h1>
-		<p class="text-lg md:text-xl lg:text-2xl xl:text-3xl text-center mt-4 px-4 md:px-0 lg:w-1/2 xl:w-2/5">Lorem
-			ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Sed euismod, nunc eget aliquet lacinia,
-			mauris nunc tincidunt nunc, id tincidunt urna ligula id nunc. Sed euismod, nunc eget aliquet lacinia, mauris
-			nunc tincidunt nunc, id tincidunt urna ligula id nunc.</p>
-	</header>
+<section class="bg-cover bg-center flex flex-col justify-center pt-9 min-h-screen md:w-full relative" id="navb" style="background-image: url(./restpobocka.jpg)">
+    <div class="absolute inset-0 bg-black opacity-50"></div>
+    <header class="container relative items-center flex flex-col justify-center py-12 sm:pt-20">
+        <h1 class="text-4xl md:text-5xl lg:text-6xl xl:text-7xl font-bold text-center text-white z-10">Welcome to Rest Caaafé</h1>
+        <p class="text-lg md:text-xl lg:text-2xl xl:text-3xl text-center mt-4 px-4 md:px-0 lg:w-1/2 xl:w-2/5 text-white z-10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Sed euismod, nunc eget aliquet lacinia, mauris nunc tincidunt nunc, id tincidunt urna ligula id nunc. Sed euismod, nunc eget aliquet lacinia, mauris nunc tincidunt nunc, id tincidunt urna ligula id nunc.</p>
+    </header>
 </section>
+
 
 
 <div class="max-w-screen-xl mx-auto px-4 mt-10 md:mt-14 lg:mt-20 justify-center items-center">
@@ -379,13 +378,11 @@
 			</li>
 		<% }); %>
 	</ul>
-	<button class="group group-hover:before:duration-500 group-hover:after:duration-1000 after:duration-500 hover:border-sky-300  duration-500 before:duration-500 hover:duration-500 underline underline-offset-2    hover:after:-right-2 hover:before:top-8 hover:before:right-16 hover:after:scale-150 hover:after:blur-none hover:before:-bottom-8 hover:before:blur-none hover:bg-sky-300 hover:underline hover:underline-offset-4  origin-left hover:decoration-2 hover:text-sky-900 relative bg-sky-800 h-16 w-64 border text-left p-3 text-gray-50 text-base font-bold rounded-lg  overflow-hidden  before:absolute before:w-12 before:h-12 before:content[''] before:right-1 before:top-1 before:z-10 before:bg-sky-400 before:rounded-full before:blur-lg  after:absolute after:z-10 after:w-20 after:h-20 after:content['']  after:bg-cyan-600 after:right-8 after:top-3 after:rounded-full after:blur">
-		Sledujte nás
-	  </button>
+	
 </section>
 
 
-<footer class="bg-purple-200 mt-10 md:mt-14 lg:mt-20">
+<footer class="bg-gradient-to-r from-red-950 to-red-700 mt-10 md:mt-14 lg:mt-20">
 	<div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
 		<div class="grid gap-10 row-gap-6 mb-8 sm:grid-cols-3 lg:grid-cols-3">
 			<div class="sm:col-span-1">
