favicon added + doc title

--- a/src/output.css
+++ b/src/output.css
@@ -1441,6 +1441,14 @@ html {
   margin-left: auto;
 }
 
+.mt-\[2rem\] {
+  margin-top: 2rem;
+}
+
+.mt-\[1rem\] {
+  margin-top: 1rem;
+}
+
 .block {
   display: block;
 }
