--- a/src/site.ejs
+++ b/src/site.ejs
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="icon" type="image/svg+xml" href="./favicon.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Rest Café</title>
 	<link rel="stylesheet" href="./output.css">
 	<script src="https://unpkg.com/htmx.org@1.9.12"
 			integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2"
@@ -350,7 +351,13 @@
 <section class="bg-white mt-10 md:mt-14 lg:mt-20" id="location">
 	<div class="max-w-7xl mx-auto px-4">
 		<h2 class="text-3xl font-bold mb-4 text-center">Kde nás najdete?</h2>
-		<p class="text-lg text-gray-700 mb-8 text-center">Nacházíme se v samém srdci Václavského náměstí.</p>
+		<p class="text-lg text-gray-700 text-center">Nacházíme se v samém srdci Václavského náměstí.</p>
+		<div class="flex flex-col items-center mb-8 mt-[1rem]">
+		<p class="font-bold">Rest Café</p>
+		<p class="">Jindřišská 2, Nové Město</p>
+		<p class="">110 00, Praha</p>
+		</div>
+
 
 		<a href="https://www.google.com/maps/place/Rest+Cafe/@50.0827484,14.4241915,17z/data=!3m1!4b1!4m6!3m5!1s0x470b954ba8aaa593:0x60a134159de605ea!8m2!3d50.082745!4d14.4267664!16s%2Fg%2F11r4ryjcq8?entry=ttu"
 		   target="_blank">
