--- a/src/site.ejs
+++ b/src/site.ejs
@@ -353,11 +353,11 @@
     </section>
 </div>
 
-<section class="bg-gray-100 pt-16 pb-7 container mt-10 md:mt-14 lg:mt-20 relative" id="reviews">
-    <div class="max-w-4xl mx-auto px-4">
-        <h2 class="text-3xl font-bold mb-4 text-center">Naše hodnocení</h2>
-        <p class="text-lg text-gray-700 mb-8 text-center">Podívejte se, co o nás říkají naši zákazníci.</p>
-        <div class="swiper-container">
+<section class="bg-gradient-to-r from-red-800 to-red-600 pt-16 pb-7 mt-10 md:mt-14 container lg:mt-20 relative overflow-hidden" id="reviews">
+    <div class="max-w-7xl mx-auto px-4">
+        <h2 class="text-3xl font-bold mb-4 text-center text-white">Naše hodnocení</h2>
+        <p class="text-lg text-white mb-8 text-center">Podívejte se, co o nás říkají naši zákazníci.</p>
+        <div class="swiper-container overflow-hidden">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="bg-white rounded-lg shadow-md p-6 md:ml-4">
@@ -423,7 +423,7 @@
                                         target="_blank" class="underline">(123 hodnocení)</a>
 					</span>
                         </div>
-                        <p class="text-gray-700"><span class="italic">"Skvělé místo s přátelskou atmosférou a skvělým personálem"</span>
+                        <p class="text-gray-700"><span class="italic">"Nejlepší káva od asijského prince"</span>
                             <br> <span class="font-bold">-Jan</span></p>
                     </div>
                 </div>
@@ -440,13 +440,11 @@
                                         target="_blank" class="underline">(123 hodnocení)</a>
 					</span>
                         </div>
-                        <p class="text-gray-700"><span class="italic">"Skvělé místo s přátelskou atmosférou a skvělým personálem"</span>
+                        <p class="text-gray-700"><span class="italic">"Peckovní kávička "</span>
                             <br> <span class="font-bold">-Jan</span></p>
                     </div>
                 </div>
             </div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
         </div>
     </div>
 </section>
@@ -486,7 +484,7 @@
 </section>
 
 
-<footer class="bg-gradient-to-r from-red-950 to-red-700 mt-10 md:mt-14 lg:mt-20">
+<footer class="bg-gradient-to-r from-red-800 to-red-600 mt-10 md:mt-14 lg:mt-20">
     <div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
         <div class="grid gap-10 row-gap-6 mb-8 sm:grid-cols-3 lg:grid-cols-3">
             <div class="sm:col-span-1">
@@ -499,19 +497,19 @@
                 <div class="flex">
                     <p class="mr-1 text-white">Phone:</p>
                     <a href="tel:123-456-789" aria-label="Our phone" title="Our phone"
-                       class="transition-colors duration-300 text-deep-purple-accent-400 hover:text-deep-purple-800">+420
+                       class="transition-colors text-white duration-300 text-deep-purple-accent-400 hover:text-deep-purple-800">+420
                         123 456 789</a>
                 </div>
                 <div class="flex">
                     <p class="mr-1 text-white">Email:</p>
                     <a href="mailto:test@seznam.cz" aria-label="Our email" title="Our email"
-                       class="transition-colors duration-300 text-deep-purple-accent-400 hover:text-deep-purple-800">info@restcafe.cz</a>
+                       class="transition-colors text-white duration-300 text-deep-purple-accent-400 hover:text-deep-purple-800">info@restcafe.cz</a>
                 </div>
                 <div class="flex">
                     <p class="mr-1 text-white">Adresa:</p>
                     <a href="https://www.google.com/maps/place/Rest+Cafe/@50.0827484,14.4241915,17z/data=!3m1!4b1!4m6!3m5!1s0x470b954ba8aaa593:0x60a134159de605ea!8m2!3d50.082745!4d14.4267664!16s%2Fg%2F11r4ryjcq8?entry=ttu"
                        target="_blank" rel="noopener noreferrer" aria-label="Our address" title="Our address"
-                       class="transition-colors duration-300 text-deep-purple-accent-400 hover:text-deep-purple-800">
+                       class="transition-colors text-white duration-300 text-deep-purple-accent-400 hover:text-deep-purple-800">
                         Jindřišská 2, 110 00, Praha 1
                     </a>
                 </div>
@@ -523,7 +521,7 @@
 
                     </a>
                     <a href="https://www.instagram.com/restcafe.cz/"
-                       class="text-gray-500 transition-colors duration-300 hover:text-deep-purple-accent-400"
+                       class="text-gray-500 text-white transition-colors duration-300 hover:text-deep-purple-accent-400"
                        target="_blank">
                         <svg viewBox="0 0 30 30" fill="currentColor" class="h-6">
                             <circle cx="15" cy="15" r="4"></circle>
@@ -533,7 +531,7 @@
                         </svg>
                     </a>
                     <a href="https://www.facebook.com/restcafecz/"
-                       class="text-gray-500 transition-colors duration-300 hover:text-deep-purple-accent-400"
+                       class="text-gray-500 text-white transition-colors duration-300 hover:text-deep-purple-accent-400"
                        target="_blank">
                         <svg viewBox="0 0 24 24" fill="currentColor" class="h-5">
                             <path
